// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeRange Component should handle conditional rendering of the dropdown 1`] = `
<DocumentFragment>
  <div
    class="relative w-fit"
  >
    <div
      class="flex cursor-pointer items-center rounded-md border px-4"
    >
      <input
        class="h-[50px] w-full cursor-pointer rounded-md border-dotted border-gray-300 text-center text-lg outline-none focus:ring-0"
        placeholder="00:00"
        readonly=""
        type="text"
        value=""
      />
      <svg
        class="ml-2 size-6 text-gray-500"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12C2 17.52 6.47 22 11.99 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 11.99 2ZM12 20C7.58 20 4 16.42 4 12C4 7.58 7.58 4 12 4C16.42 4 20 7.58 20 12C20 16.42 16.42 20 12 20ZM11.78 7H11.72C11.32 7 11 7.32 11 7.72V12.44C11 12.79 11.18 13.12 11.49 13.3L15.64 15.79C15.98 15.99 16.42 15.89 16.62 15.55C16.83 15.21 16.72 14.76 16.37 14.56L12.5 12.26V7.72C12.5 7.32 12.18 7 11.78 7Z"
          fill="#454545"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimeRange Component should handle conditional rendering of the dropdown 2`] = `
<DocumentFragment>
  <div
    class="relative w-fit"
  >
    <div
      class="flex cursor-pointer items-center rounded-md border px-4"
    >
      <input
        class="h-[50px] w-full cursor-pointer rounded-md border-dotted border-gray-300 text-center text-lg outline-none focus:ring-0"
        placeholder="00:00"
        readonly=""
        type="text"
        value=""
      />
      <svg
        class="ml-2 size-6 text-gray-500"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12C2 17.52 6.47 22 11.99 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 11.99 2ZM12 20C7.58 20 4 16.42 4 12C4 7.58 7.58 4 12 4C16.42 4 20 7.58 20 12C20 16.42 16.42 20 12 20ZM11.78 7H11.72C11.32 7 11 7.32 11 7.72V12.44C11 12.79 11.18 13.12 11.49 13.3L15.64 15.79C15.98 15.99 16.42 15.89 16.62 15.55C16.83 15.21 16.72 14.76 16.37 14.56L12.5 12.26V7.72C12.5 7.32 12.18 7 11.78 7Z"
          fill="#454545"
        />
      </svg>
    </div>
    <ul
      class="absolute z-10 mt-2 max-h-60 w-full overflow-y-auto rounded-md border border-gray-300 bg-white shadow-lg"
      data-testid="dropdown"
    >
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        00:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        00:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        01:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        01:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        02:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        02:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        03:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        03:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        04:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        04:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        05:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        05:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        06:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        06:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        07:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        07:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        08:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        08:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        09:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        09:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        10:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        10:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        11:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        11:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        12:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        12:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        13:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        13:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        14:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        14:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        15:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        15:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        16:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        16:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        17:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        17:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        18:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        18:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        19:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        19:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        20:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        20:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        21:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        21:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        22:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        22:30
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        23:00
      </li>
      <li
        class="cursor-pointer p-2 text-center hover:bg-blue-100"
      >
        23:30
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
